--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@1,9..144,400;1,9..144,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="Calculate.js" type="text/javascript"></script>
+    <script src="Display.js" type="text/javascript"></script>
     <script src="index.js" type="text/javascript" defer></script>
 </head>
 <body>
@@ -20,20 +21,20 @@
             <button class="col-2">C</button>
             <button>&larr;</button>
             <button class="operator">%</button>
-            <button class="number">7</button>
-            <button class="number">8</button>
-            <button class="number">9</button>
+            <button class="isnumber">7</button>
+            <button class="isnumber">8</button>
+            <button class="isnumber">9</button>
             <button class="operator">X</button>
-            <button class="number">4</button>
-            <button class="number">5</button>
-            <button class="number">6</button>
+            <button class="isnumber">4</button>
+            <button class="isnumber">5</button>
+            <button class="isnumber">6</button>
             <button class="operator">-</button>
-            <button class="number">1</button>
-            <button class="number">2</button>
-            <button class="number">3</button>
+            <button class="isnumber">1</button>
+            <button class="isnumber">2</button>
+            <button class="isnumber">3</button>
             <button class="operator">+</button>
             <button class="col-2 number">0</button>
-            <button class="number">.</button>
+            <button class="isnumber">.</button>
             <button class="operator">=</button>
         </div>
     </div>
