--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
                 <div id="previus-value"></div>
                 <div id="actual-value"></div>
             </div>
-            <button class="col-2">C</button>
-            <button>&larr;</button>
-            <button class="operator">%</button>
+            <button class="col-2" onclick="display.toeraseAll()">C</button>
+            <button onclick="display.toerase()">&larr;</button>
+            <button class="operator" value="divi">%</button>
             <button class="isnumber">7</button>
             <button class="isnumber">8</button>
             <button class="isnumber">9</button>
-            <button class="operator">X</button>
+            <button class="operator" value="mult">X</button>
             <button class="isnumber">4</button>
             <button class="isnumber">5</button>
             <button class="isnumber">6</button>
-            <button class="operator">-</button>
+            <button class="operator" value="sust">-</button>
             <button class="isnumber">1</button>
             <button class="isnumber">2</button>
             <button class="isnumber">3</button>
-            <button class="operator">+</button>
-            <button class="col-2 number">0</button>
+            <button class="operator" value="addi">+</button>
+            <button class="col-2 isnumber">0</button>
             <button class="isnumber">.</button>
-            <button class="operator">=</button>
+            <button class="operator" value="equal">=</button>
         </div>
     </div>
 </body>
